@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 mvn clean package
-java --module-path ./target/modules -Dconfig.profiles=local --enable-preview -m nima.example
+java --module-path ./target/modules -m nima.example
